# OnlineChatRoom

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  THIRD_PARTY_NOTICES.md  qmlls.ini  resources.qrc  simple_server.py  test_client.py  unit_tests_results.xml
.github/prompts/: Mermaid_Diagram.prompt.md  plan.prompt.md  specify.prompt.md  tasks.prompt.md
.github/workflows/: ci.yml
MiniEventWork/include/: AbstractSever.hpp  Channel.hpp  ConnectionManager.hpp  EVConnConnector.hpp  EVConnListener.hpp  EventBase.hpp  IO_Multiplexer.hpp  MessageHandler.hpp  MiniEventLog.hpp  MultiplexerSelector.hpp  Platform.hpp
MiniEventWork/include/Buffer/: Buffer.hpp  BufferEvent.hpp
MiniEventWork/include/Configure/: Configure.hpp
MiniEventWork/include/DataStructure/: MiniEvent_queue.hpp  min_heap.hpp
MiniEventWork/include/InheritedFromIO_Multiplexer/: Epoll_multiplexer.hpp  IOCP_multiplexer.hpp  Kqueue_multiplexer.hpp  Select_multiplexer.hpp
MiniEventWork/include/MultiThread/: ThreadPool_副本.hpp  Threadable.hpp
MiniEventWork/include/Sever/: HTTPRequest.hpp  HTTPServer.hpp  HTTPServerMsgHandler.hpp  HttpContaner.hpp  TCPMsgHandler.hpp  TCPSever.hpp  TimeOutServer.hpp
MiniEventWork/src/: AbstractSever.cpp  Buffer.cpp  BufferEvent.cpp  Channel.cpp  Configure.cpp  ConnectionManager.cpp  EVConnConnector.cpp  EVConnListener.cpp  EventBase.cpp  MessageHandler.cpp  MiniEventLog.cpp  MultiplexerSelector.cpp  Threadable.cpp
MiniEventWork/src/InheritedFromIO_Multiplexer/: Epoll_multiplexer.cpp  IOCP_multiplexer.cpp  Kqueue_multiplexer.cpp  Select_multiplexer.cpp
MiniEventWork/src/Sever/: HTTPRequest.cpp  HTTPServerMsgHandler.cpp  HTTPSever.cpp  HttpContaner.cpp  TCPMsgHandler.cpp  TCPSever.cpp  TimeOutServer.cpp
cmake/: Options.cmake
config/: production.example.ini
docs/: error-catalog.md  index.md  network-error-mapping.md  startup-profile.md  storage-concurrency.md
include/model/: Entities.hpp  Room.hpp
include/net/: IMiniEventAdapter.h  MiniEventAdapter.h
include/storage/: Storage.h  Storage.hpp
memory/: constitution_update_checklist_zh.md  constitution_zh.md
qml/: Main.qml
qml/components/: MessageItem.qml
qml/i18n/: strings_zh_CN.qml
qml/pages/: ChatPage.qml  LoginPage.qml
qml/themes/: ThemeManager.qml  colors.qml
reports/coverage/: index.html
scripts/: coverage.sh  cpu_sample_chat.sh  db_backup.sh  gen_changelog.sh  loopback_demo.sh  package.sh  run_single_test.sh  smoke_all.sh
specs/001-title-description-ui/: README.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md  ui-design.md
specs/001-title-description-ui/contracts/: openapi.yaml
specs/001-title-description-ui/contracts/cpp/: FileUploader.hpp  MessageService.hpp  MiniEventAdapter.hpp  OfflineQueue.hpp  SqlStorage.hpp  StorageCrypto.hpp  ViewModels.hpp
specs/003-title-description-minievent/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-title-description-minievent/contracts/: network_contract.md  storage_contract.md
src/: CMakeLists.txt
src/app/: main.cpp
src/common/: Log.cpp  Log.hpp
src/config/: Config.cpp  Config.h  Config.hpp
src/i18n/: I18n.cpp  I18n.h
src/net/: MiniEventAdapterImpl.cpp  MiniEventAdapterImpl.h
src/storage/: SQLiteStorage.cpp  SQLiteStorage.h  SQLiteStorage.hpp
src/transfer/: FileTransferManager.cpp  FileTransferManager.h
src/util/: Sha256.cpp  Sha256.h  ThreadNaming.cpp  ThreadNaming.h  Uuid.cpp  Uuid.h
src/viewmodel/: ChatViewModel.cpp  ChatViewModel.h  LoginViewModel.cpp  LoginViewModel.h
templates/: agent-file-template_zh.md  plan-template_zh.md  spec-template_zh.md  tasks-template_zh.md
tests/: CMakeLists.txt  simple_gtest_verification.cpp
tests/config/: test_config.cpp
tests/contract/: test_network_connect.cpp  test_network_file_chunk.cpp  test_storage_messages.cpp  test_storage_user.cpp
tests/integration/: test_e2e_file_reconnect.cpp  test_e2e_login_send.cpp  test_recover_after_corruption.cpp
tests/mocks/: MockMiniEventAdapter.h  MockStorage.h
tests/net/: test_mini_event_adapter.cpp
tests/storage/: test_sqlite.cpp
tests/support/: Matchers.h
tests/transfer/: test_file_transfer.cpp
tests/viewmodel/: test_chat.cpp  test_login.cpp
